--- a/test/fixtures/businesses.yml
+++ b/test/fixtures/businesses.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  client: one
+  logs: MyString
 
 two:
-  client: two
+  logs: MyString
