--- a/test/fixtures/businesslogs.yml
+++ b/test/fixtures/businesslogs.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  note: MyString
   client: one
 
 two:
+  note: MyString
   client: two
