--- a/config/database.yml
+++ b/config/database.yml
@@ -16,15 +16,25 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+# database.yml
 
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
+default: &default
+  # adapter: sqlite3 を削除
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
+development:
+  <<: *default
+  adapter: sqlite3 # 追加
+  database: db/development.sqlite3
 
 production:
   <<: *default
   adapter: postgresql
   database: db/production.pg
+
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
+
+
